add forwards info for tracker

--- a/tracker/CONFIG
+++ b/tracker/CONFIG
@@ -1,1 +1,1 @@
-{"region": 0, "name": "浙大内部节点", "address": "10.10.10.10:1560"}
+{"region": -1, "name": "本地回路测试", "address": "127.0.0.1:9090", "coordinate": "127.0.0.1:8080"}
