--- a/tracker/CONFIG
+++ b/tracker/CONFIG
@@ -1,1 +1,1 @@
-{"region": -1, "name": "本地回路测试", "address": "127.0.0.1:9090", "coordinate": "127.0.0.1:8080"}
+{"region": 0, "name": "ZJU局域网测试", "address": "222.205.37.250:9090", "coordinate": "222.205.37.250:8080"}
