--- a/tracker/CONFIG
+++ b/tracker/CONFIG
@@ -1,1 +1,1 @@
-{"region": -1, "name": "本地回路测试", "address": "127.0.0.1:9090", "coordinate": "127.0.0.1:8080"}
+{"region": -1, "name": "本地测试", "address": "127.0.0.1:9090", "coordinate": "127.0.0.1:8080"}
